#239 - fix sidebar images looking smushed on mobile by resetting the max-width to none in mobile stylesheet

--- a/wp-content/themes/nationswell/scss/partials/mobile/_components.scss
+++ b/wp-content/themes/nationswell/scss/partials/mobile/_components.scss
@@ -230,6 +230,15 @@
 
 }
 
+
+.sidebar {
+
+  .widget_sp_image {
+    max-width: none;
+  }
+
+}
+
 /* module */
 .module {
   &.module--sidebar {
